# flac-streamer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/flac-streamer/: common-attrs.h  common-c.h  common.h  dr_libs.h  flac-streamer.h  utils.h
lib/: CMakeLists.txt
lib/flac-streamer/: CMakeLists.txt  common-internal.h  dr_libs.cpp  flac-streamer.cpp  utils.cpp
tools/: CMakeLists.txt
tools/flac-streamer-util/: CMakeLists.txt  flac-streamer-util.cpp
